go down with java compatibility to java 11 since in some projects it still is that. (source is now 1.8, but dependencies are java 11 - perhaps we have to go down further.)