@@ -32,38 +32,39 @@ public class ReplaceAction extends AbstractPluginAction {
 
     @Override
     public String openApiDescription() {
-        return "/replaceInFile:\n" +
-                "  post:\n" +
-                "    operationId: replaceInFile\n" +
-                "    summary: Replaces the single occurrence of one or more literal strings in a file. The whole file content is matched, not line by line.\n" +
-                "    parameters:\n" +
-                "      - name: path\n" +
-                "        in: query\n" +
-                "        description: relative path to file\n" +
-                "        required: true\n" +
-                "        schema:\n" +
-                "          type: string\n" +
-                "    requestBody:\n" +
-                "      required: true\n" +
-                "      content:\n" +
-                "        application/json:\n" +
+        return "" +
+                "  /replaceInFile:\n" +
+                "    post:\n" +
+                "      operationId: replaceInFile\n" +
+                "      summary: Replaces the single occurrence of one or more literal strings in a file. The whole file content is matched, not line by line.\n" +
+                "      parameters:\n" +
+                "        - name: path\n" +
+                "          in: query\n" +
+                "          description: relative path to file\n" +
+                "          required: true\n" +
                 "          schema:\n" +
-                "            type: object\n" +
-                "            properties:\n" +
-                "              replacements:\n" +
-                "                type: array\n" +
-                "                items:\n" +
-                "                  type: object\n" +
-                "                  properties:\n" +
-                "                    search:\n" +
-                "                      type: string\n" +
-                "                      description: The literal string to be replaced - can contain many lines, but please take care to find a small number of lines to replace. Everything that is replaced must be here. Prefer to match the whole line / several whole lines.\n" +
-                "                    replace:\n" +
-                "                      type: string\n" +
-                "                      description: Literal replacement, can contain several lines. Please observe the correct indentation.\n" +
-                "    responses:\n" +
-                "      '200':\n" +
-                "        description: File updated successfully\n";
+                "            type: string\n" +
+                "      requestBody:\n" +
+                "        required: true\n" +
+                "        content:\n" +
+                "          application/json:\n" +
+                "            schema:\n" +
+                "              type: object\n" +
+                "              properties:\n" +
+                "                replacements:\n" +
+                "                  type: array\n" +
+                "                  items:\n" +
+                "                    type: object\n" +
+                "                    properties:\n" +
+                "                      search:\n" +
+                "                        type: string\n" +
+                "                        description: The literal string to be replaced - can contain many lines, but please take care to find a small number of lines to replace. Everything that is replaced must be here. Prefer to match the whole line / several whole lines.\n" +
+                "                      replace:\n" +
+                "                        type: string\n" +
+                "                        description: Literal replacement, can contain several lines. Please observe the correct indentation.\n" +
+                "      responses:\n" +
+                "        '200':\n" +
+                "          description: File updated successfully\n";
     }
 
     protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws IOException {
@@ -76,14 +77,14 @@ public class ReplaceAction extends AbstractPluginAction {
         }
 
         try {
-            String content = Files.readString(path, UTF_8);
+            String content = new String(Files.readAllBytes(path), UTF_8);
             int totalReplacementCount = 0;
             List<Range<Long>> totalModifiedLineNumbers = new ArrayList<>();
             int replacementNo = 0;
 
             for (Replacement replacement : replacementRequest.getReplacements()) {
                 replacementNo++;
-                StringBuilder sb = new StringBuilder();
+                StringBuffer sb = new StringBuffer();
                 String pattern = Pattern.quote(replacement.getSearch());
                 String compiledReplacement = Matcher.quoteReplacement(replacement.getReplace());
                 Matcher m = Pattern.compile(pattern).matcher(content);
@@ -130,7 +131,7 @@ public class ReplaceAction extends AbstractPluginAction {
 
             List<String> modifiedLineDescr = rangeDescription(totalModifiedLineNumbers);
 
-            Files.writeString(path, content, UTF_8);
+            Files.write(path, content.getBytes(UTF_8));
             resp.setStatus(HttpServletResponse.SC_OK);
             resp.setContentType("text/plain;charset=UTF-8");
             resp.getWriter().write(totalReplacementCount + " replacement; modified line(s) "
