@@ -40,7 +40,7 @@ public class TbUtils {
                         + request.getMethod() + " " + request.getRequestURI()
                         + (request.getQueryString() != null && !request.getQueryString().isEmpty() ? "?" + request.getQueryString() : "")
                         + "\n";
-                Files.writeString(requestLog, logmsg, StandardOpenOption.APPEND);
+                Files.write(requestLog, logmsg.getBytes(), StandardOpenOption.APPEND);
             } catch (IOException e) { // not critical but strange - we'd want to know.
                 logError("Could not write to request log " + requestLog + ": " + e.getMessage());
             }
@@ -53,7 +53,7 @@ public class TbUtils {
                 parameterValue = parameterValue.substring(0, 200) + "\n... (part omitted)\n" + parameterValue.substring(parameterValue.length() - 200);
             }
             try {
-                Files.writeString(requestLog, parameterName + ": " + parameterValue + "\n", StandardOpenOption.APPEND);
+                Files.write(requestLog, (parameterName + ": " + parameterValue + "\n").getBytes(), StandardOpenOption.APPEND);
                 logInfo(parameterName + ": " + parameterValue + "\n");
             } catch (IOException e) { // not critical but strange - we'd want to know.
                 logError("Could not write to request log " + requestLog + ": " + e.getMessage());
@@ -149,7 +149,7 @@ public class TbUtils {
     }
 
     protected static long lineNumberAfter(String contentpart) {
-        return (contentpart + "x").lines().count();
+        return (contentpart + "x").split("\n").length;
     }
 
     static List<String> rangeDescription(List<Range<Long>> modifiedLineNumbers) {
